deleted old files and fixed alignment nav bar

--- a/index.css
+++ b/index.css
@@ -33,7 +33,8 @@ header{
     filter: drop-shadow(10px);
     display: flex;
     justify-content: space-between;
-    z-index: 1000;
+    align-items:center;
+    z-index: 100;
 }
 
 .logo{
